hasta buscar los motivos tipos, tambien tengo que hacer un metodo que se llame CompletarTareas() o algo asi para que el estado de la orden pase de abierta a completamente realizada